--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@lottiefiles/lottie-interactivity": "^1.6.2",
     "@lottiefiles/lottie-player": "^2.0.2",
+    "@mui/material": "^5.15.14",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.3",
     "lottie-react": "^2.4.0",
